tests/test_compile/cases/ctx_validation.stderr
error: `ctx_default` must be used with `ctx`
 --> $DIR/ctx_validation.rs:4:22
  |
4 | #[deku(ctx_default = "1")]
  |                      ^^^
